--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -9,10 +9,19 @@
 	EPE,
 	AUTHOR = "EPE",
 	TITLE = "Empresa de Pesquisa Energética",
-	HOWPUBLISHED = "http://www.epe.gov.br/pt/abcdenergia/matriz-energetica-e-eletrica",
+	HOWPUBLISHED = "http://www.epe.gov.br/pt/abcdenergia/matriz-energeticae-eletrica",
   	YEAR = "2018",
   	NOTE = "(Acesso em 26 Janeiro 2019)",
 }
+@MISC{
+	Pandas,
+	AUTHOR = "Pandas",
+	TITLE = "Pandas",
+	HOWPUBLISHED = "https://pandas.pydata.org/",
+	YEAR = "2020",
+	NOTE = "(Acesso em 07 Março 2020)",
+}
+https://pandas.pydata.org/
 @MISC{
 	ONS,
 	AUTHOR = "ONS",
@@ -88,21 +97,23 @@
 @MISC{
 	PrevisaoPrecoFuturoACL,
 	AUTHOR = "Mateus Alves Cavaliere",
-	TITLE = "Previsão de preços futuros de energia eleétrica no ambiente de contratação livre - uma abordagem de equilíbrio de mercado sob incertezas",
+	TITLE = "Previsão de preços futuros de energia elétrica no ambiente de contratação livre - uma abordagem de equilíbrio de mercado sob incertezas",
 	SCHOOL = "Universidade Federal do Rio de Janeiro",
-	YEAR = "2017",
+	NOTE  = {Monografia (Engenharia da Produção), UFRJ (Universidade Federal do Rio de Janeiro), Rio de Janeiro, Brasil},
+	YEAR = "2017"
 }
 @MISC{
 	SmartGrid,
 	AUTHOR = "Eduardo Pacheco Bueno Muniz Barretto",
 	TITLE = "Smart grid: Eficiência energética e a geração distribuida a partir das redes inteligentes",
-	SCHOOL = "Universidade Federal do Rio de Janeiro",
-	YEAR = "2018",
+	NOTE  = {Monografia (Engenharia Elétrica), UFRJ (Universidade Federal do Rio de Janeiro), Rio de Janeiro, Brasil},
+	YEAR = "2018"
 }
 @MISC{
 	TCC_PLD,
 	AUTHOR = "Alan Patrik Souza Silva",
 	TITLE = "Previsão do preço de liquidação das diferenças por meio de redes neurais artificiais",
+	NOTE  = {Monografia (Engenharia Elétrica), UFOP (Universidade Federal de Ouro Preto), Minas Gerais, Brasil},
 	SCHOOL = "Universidade Federal de Ouro Preto",
 	YEAR = "2018",
 }
@@ -138,32 +149,35 @@
 	YEAR = "1998",
 	NOTE = "(Acesso em 9 de Abril 2019)",
 }
-@BOOK{
+@MISC{
 	sTemp,
 	TITLE="Análise de Séries Temporais",
 	AUTHOR="Ricardo Sandes Ehlers",
-	YEAR={2009}
+	YEAR={2009},
+	HOWPUBLISHED="http://www.each.usp.br/rvicente/AnaliseDeSeriesTemporais.pdf"
 }
 @BOOK{
 	apostilaCaloba,
 	TITLE="Introdução ao Uso de Redes Neurais na Modelagem de
 	Sistemas Dinâmicos e Séries Temporais.",
 	AUTHOR="Luiz Pereira Calôba",
-	HOWPUBLISHED="XIV Congresso Brasileiro de Automática, Natal",
+	PUBLISHER="XIV Congresso Brasileiro de Automática, Natal",
 	YEAR={2002},
 }
 @BOOK{
 	introSP,
 	TITLE="Introduction to Signal Processing",
 	AUTHOR="Sophocle J. Orfanidis",
-	HOWPUBLISHED="https://www.ece.rutgers.edu/~orfanidi/intro2sp/",
+	PUBLISHER="Pearson Education",
 	YEAR={2002},
+	NOTE={pp. 464-523}
 }
+
 @MISC{
 	tccDanilo,
 	AUTHOR = "Danilo Filippo Reiszel Pereira",
 	TITLE = "Aprendizado de máquina e aprendizado profundo para apoio à decisão no mercado financeiro",
-	SCHOOL = "Univeridade Federal de do Rio de Janeiro",
+	NOTE  = {Monografia (Engenharia Eletrônica e da Computação), UFRJ (Universidade Federal do Rio de Janeiro), Rio de Janeiro, Brasil},
 	YEAR = "2018",
 }
 
@@ -499,7 +513,7 @@
 
 @MASTERSTHESIS{
 	RNA_DIRETA_E_RECORRENTE,
-	AUTHOR = "Flaviano Ramos Pereira Junior",
+	AUTHOR = "Flaviano Ramos Junior",
 	TITLE = "Redes neurais diretas e recorrentes na previsão do preço de energia elétrica de curto prazo no mercado brasileiro",
 	SCHOOL = "Universidade Federal do Pará",
 	YEAR = "2016",
@@ -524,7 +538,7 @@
 	TCC_FABIANE,
 	AUTHOR = "Fabiane Barbosa do Nascimento",
 	TITLE = "Redes Neurais Artificiais Aplicadas à Predição do Preço De Liquidação das Diferenças no Mercado De Energia",
-	SCHOOL = "Universidade Federal de Juiz de Fora",
+	NOTE  = {Monografia (Engenharia Elétrica), UFJF (Universidade Federado de Juiz de Fora), Minas Gerais, Brasil},
 	YEAR = "2017",
 }
 @ARTICLE{
